src/golden/cards/templates/nested/errors/test.golden/secondMustBeItem.fl
	card SecondMustBeItem
		template top
			
		template other-card
